@@ -3,6 +3,7 @@
 namespace Drupal\Tests\search_api_db\Kernel;
 
 use Drupal\KernelTests\KernelTestBase;
+use Drupal\search_api\Utility\Utility;
 use Drupal\search_api_autocomplete\Entity\Search;
 use Drupal\search_api_db\Plugin\search_api\backend\Database;
 use Drupal\Tests\search_api\Functional\ExampleContentTrait;
@@ -70,7 +71,7 @@ class AutocompleteTest extends KernelTestBase {
     // Do not use a batch for tracking the initial items after creating an
     // index when running the tests via the GUI. Otherwise, it seems Drupal's
     // Batch API gets confused and the test fails.
-    if (php_sapi_name() != 'cli') {
+    if (!Utility::isRunningInCli()) {
       \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
     }
 
