@@ -6,6 +6,7 @@ use Drupal\entity_test\Entity\EntityTestMulRevChanged;
 use Drupal\KernelTests\KernelTestBase;
 use Drupal\search_api\Entity\Index;
 use Drupal\search_api\Entity\Server;
+use Drupal\search_api\Utility\Utility;
 
 /**
  * Tests Search API functionality when executed in the CLI.
@@ -62,7 +63,7 @@ class CliTest extends KernelTestBase {
 
     // Disable the use of batches for item tracking to simulate a CLI
     // environment.
-    if (php_sapi_name() != 'cli') {
+    if (!Utility::isRunningInCli()) {
       \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
     }
   }
