@@ -3,6 +3,7 @@
 namespace Drupal\Tests\search_api\Kernel\Views;
 
 use Drupal\KernelTests\KernelTestBase;
+use Drupal\search_api\Utility\Utility;
 
 /**
  * Tests whether Views pages correctly create search display plugins.
@@ -43,7 +44,7 @@ class ViewsDisplayTest extends KernelTestBase {
     // Do not use a batch for tracking the initial items after creating an
     // index when running the tests via the GUI. Otherwise, it seems Drupal's
     // Batch API gets confused and the test fails.
-    if (php_sapi_name() != 'cli') {
+    if (!Utility::isRunningInCli()) {
       \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
     }
 
